# gtk

./: meson.build
demos/gtk-demo/: demo.gresource.xml  listview_releases.c  meson.build  tabs.c
gdk/win32/: gdkdrag-win32.c  gdkdrop-win32.c  gdksurface-win32.c
gtk/: gtk.h  gtkprintoperation-unix.c  gtkstack.c  gtktextview.c  meson.build
gtk/json/: gtkjsonparser.c
testsuite/json/: meson.build  test-json-parser.c
